--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "fastapi>=0.115.0",
     "python-dotenv>=1.0.0",
     "uvicorn[standard]>=0.32.0",
+    "firebase-admin>=6.0.0",
+    "pyjwt>=2.8.0",
 ]
 
 [dependency-groups]
