認証ミドルウェアを一旦削除

--- a/app/.env
+++ b/app/.env
@@ -3,3 +3,4 @@ GOOGLE_CLOUD_PROJECT=dsk-agentspace-trial
 GOOGLE_CLOUD_LOCATION=us-central1
 DEMO_AGENT_MODEL=gemini-live-2.5-flash-native-audio
 DATA_STORE_PATH=projects/dsk-agentspace-trial/locations/global/collections/default_collection/dataStores/epson-kabunushi_1770345556242
+FIREBASE_AUTH_ENABLED=false
